CBQE-6552: QE service page - add more links

--- a/qe_gateway/style.css
+++ b/qe_gateway/style.css
@@ -13,7 +13,7 @@ h2 {
     margin: 20px 0;
 }
 
-h1, h2 {
+h1, h2, h3 {
     color: #fff
 }
 
@@ -28,4 +28,8 @@ body {
 a {
     text-decoration: none;
     color: #e93c07;
+}
+
+img {
+    max-height: 150px;
 }
