--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -5,93 +5,132 @@
         <link href="{{ url_for('static', filename = 'css/style.css') }}" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <h1 id="title">System Test Dashboard</h1>
-            <h3>Reserved</h1>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            {% endif %}
+            {% endwith %}
+            <h3>Clusters</h3>
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Duration</th>
-                    <th scope="col">Reserved By</th>
                     <th scope="col">Cluster</th>
-                    <th scope="col">Eagle Eye</th>
+                    <th scope="col">Purpose</th>
+                    <th scope="col">Reserved By</th>
+                    <th scope="col">Reservation Start</th>
+                    <th scope="col">Reservation End</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Live Start Time</th>
+                    <th scope="col">Live Duration</th>
+                    <th scope="col">Live Cluster</th>
+                    <th scope="col">Live Eagle Eye</th>
                 </tr>
                 </thead>
                 <tbody>
-                    {% for launcher in launchers | rejectattr('running', 'eq', False) %}
+                    {% for launcher in launchers %}
+                    {% if launcher.running %}
                     <tr>
-                        <th scope="row">{{ launcher.number }}</th>
+                        <th scope="row">{{ launcher.number }} <button type="button" class="btn btn-danger btn-sm">Stop</button></th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.purpose }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.reserved_by }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.start|timestamp }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.end|timestamp }} {% endif %}</th>
+                        <th scope="row">Running</th>
+                        <th scope="row">{{ launcher.started|timestamp }}</th>
                         <th scope="row">{{ launcher.running_for }}</th>
-                        <th scope="row">{{ launcher.user }}</th>
-                        <th scope="row"><a href="{{ launcher.job_url }}">{{ launcher.job_url }}</a></th>
+                        <th scope="row"><a href="{{ launcher.job_url }}">{{ launcher.short_job_url }}</a></th>
                         <th scope="row">
-                            {% if launcher.log_parser %} 
-                            <a href="{{ launcher.log_parser.url }}">{{ launcher.log_parser.url }}</a> 
+                            {% if launcher.log_parser %}
+                            <a href="{{ launcher.log_parser.url }}">{{ launcher.log_parser.short_url }}</a> 
                             {% else %}
                             <span class="badge bg-danger">No log parser found</span>
                             {% endif %}
                         </th>
                     </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <h3>Available</h1>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Launch</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {% for launcher in launchers | rejectattr('running', 'eq', True) %}
+                    {% else %}
                     <tr>
-                        <th scope="row">{{ launcher.number }}</th>
-                        <th scope="row"><a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-primary">Launch {{ launcher.number }}</button></th>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            <h3>History</h1>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Cluster</th>
-                    <th scope="col">Eagle Eye</th>
-                    <th scope="col">Result</th>
-                </tr>
-                </thead>
-                <tbody>
-                    {% for launcher in history | rejectattr('running', 'eq', True) %}
-                    <tr>
-                        <th scope="row">{{ launcher.number }}</th>
-                        <th scope="row"><a href="{{ launcher.job_url }}">{{ launcher.job_url }}</a></th>
                         <th scope="row">
-                            {% if launcher.log_parser %} 
-                            <a href="{{ launcher.log_parser.url }}">{{ launcher.log_parser.url }}</a> 
-                            {% else %} 
-                            <span class="badge bg-danger">No log parser found</span>
+                            {{ launcher.number }}
+
+                            {% if launcher.reservation %}
+                            <a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-success btn-sm">Launch</button>
+                            <a href="/release/{{ launcher.reservation.id }}" class="btn btn-warning btn-sm">Release</button>
+                            {% else %}
+                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#reserve{{ launcher.number }}">
+                                Reserve
+                            </button>
+                            
+                            <div class="modal fade" id="reserve{{ launcher.number }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Reserve Cluster {{ launcher.number }}</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="/reserve" method="POST">
+                                            <div class="mb-3">
+                                                <label for="name" class="form-label">Name</label>
+                                                <input type="text" class="form-control" name="name" id="name">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="purpose" class="form-label">Purpose</label>
+                                                <input type="text" class="form-control" name="purpose" id="purpose">
+                                            </div>
+                                            <input type="hidden" value="{{ launcher.number }}" class="form-control" name="cluster" id="cluster">
+                                            <div class="mb-3">
+                                                <label for="duration" class="form-label">Duration (hours)</label>
+                                                <input type="text" class="form-control" name="duration" id="duration">
+                                            </div>
+                                            <button type="submit" class="btn btn-primary">Reserve</button>
+                                        </form>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
                             {% endif %}
                         </th>
-                        <th>{{ launcher.result }}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.purpose }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.reserved_by }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.start|timestamp }} {% endif %}</th>
+                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.end|timestamp }} {% endif %}</th>
+                        <th scope="row">Idle</th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                    </tr>
+                    {% endif %}
+                    {% endfor %}
+                </tbody>
+            </table>
+            <h3>History</h3>
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Cluster</th>
+                    <th scope="col">Purpose</th>
+                    <th scope="col">Reserved By</th>
+                    <th scope="col">Reservation Start</th>
+                    <th scope="col">Reservation End</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {% for reservation in reservation_history %}
+                    <tr>
+                        <th scope="row">{{ reservation.cluster }}</th>
+                        <th scope="row">{{ reservation.purpose }}</th>
+                        <th scope="row">{{ reservation.reserved_by }}</th>
+                        <th scope="row">{{ reservation.start|timestamp }}</th>
+                        <th scope="row">{{ reservation.end|timestamp }}</th>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
-            {% for launcher in launchers %}
-                <!-- <h1>Launcher {{ launcher.number }}</h1>
-                <p>Status: {% if launcher.running: %} Running for {{ launcher.running_for }} {% else %} Finished ({{ launcher.result }}) {% endif %}</p>
-                {% if launcher.running: %}
-                <p>User: {{ launcher.user }}</p>
-                {% endif %}
-                <p>Launcher: <a href="{{ launcher.job_url }}">{{ launcher.job_url }}</a></p>
-                {% if launcher.log_parser: %}
-                <p>Log Parser: <a href="{{ launcher.log_parser.url }}">{{ launcher.log_parser.url }}</a></p>
-                <p>Status: {% if launcher.log_parser.running: %} Running for {{ launcher.log_parser.running_for }} {% else %} Finished ({{ launcher.log_parser.result }}) {% endif %}</p>
-                {% endif %} -->
-            {% endfor %}
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
