--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -18,11 +18,11 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">Cluster</th>
+                    <th scope="col">Launcher</th>
                     <th scope="col">Purpose</th>
                     <th scope="col">Reserved By</th>
                     <th scope="col">Reservation Start</th>
-                    <th scope="col">Reservation End</th>
+                    <th scope="col">Reservation Duration</th>
                     <th scope="col">Status</th>
                     <th scope="col">Live Start Time</th>
                     <th scope="col">Live Duration</th>
@@ -34,11 +34,40 @@
                     {% for launcher in launchers %}
                     {% if launcher.running %}
                     <tr>
-                        <th scope="row">{{ launcher.number }} <button type="button" class="btn btn-danger btn-sm">Stop</button></th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.purpose }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.reserved_by }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.start|timestamp }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.end|timestamp }} {% endif %}</th>
+                        <th scope="row">
+                            Launcher {{ launcher.number }}
+                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#reserve{{ launcher.number }}">
+                                Reserve
+                            </button>
+                            <button type="button" class="btn btn-danger btn-sm">Stop</button>
+                        </th>
+                        {% if launcher.reservations %}
+                        <th scope="row">
+                            {% for reservation in launcher.reservations %}
+                            {{ reservation.purpose }}
+                            {% endfor %}
+                        </th>
+                        <th scope="row">
+                            {% for reservation in launcher.reservations %}
+                            {{ reservation.reserved_by }}
+                            {% endfor %}
+                        </th>
+                        <th scope="row">
+                            {% for reservation in launcher.reservations %}
+                            {{ reservation.start|timestamp }}
+                            {% endfor %}
+                        </th>
+                        <th scope="row">
+                            {% for reservation in launcher.reservations %}
+                            {{ reservation.duration }}
+                            {% endfor %}
+                        </th>
+                        {% else %}
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        {% endif %}
                         <th scope="row">Running</th>
                         <th scope="row">{{ launcher.started|timestamp }}</th>
                         <th scope="row">{{ launcher.running_for }}</th>
@@ -54,50 +83,50 @@
                     {% else %}
                     <tr>
                         <th scope="row">
-                            {{ launcher.number }}
-
-                            {% if launcher.reservation %}
-                            <a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-success btn-sm">Launch</button>
-                            <a href="/release/{{ launcher.reservation.id }}" class="btn btn-warning btn-sm">Release</button>
-                            {% else %}
+                            Launcher {{ launcher.number }}
                             <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#reserve{{ launcher.number }}">
                                 Reserve
                             </button>
-                            
-                            <div class="modal fade" id="reserve{{ launcher.number }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel">Reserve Cluster {{ launcher.number }}</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form action="/reserve" method="POST">
-                                            <div class="mb-3">
-                                                <label for="name" class="form-label">Name</label>
-                                                <input type="text" class="form-control" name="name" id="name">
-                                            </div>
-                                            <div class="mb-3">
-                                                <label for="purpose" class="form-label">Purpose</label>
-                                                <input type="text" class="form-control" name="purpose" id="purpose">
-                                            </div>
-                                            <input type="hidden" value="{{ launcher.number }}" class="form-control" name="cluster" id="cluster">
-                                            <div class="mb-3">
-                                                <label for="duration" class="form-label">Duration (hours)</label>
-                                                <input type="text" class="form-control" name="duration" id="duration">
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Reserve</button>
-                                        </form>
-                                    </div>
-                                </div>
-                                </div>
-                            </div>
+                            {% if launcher.reservations and launcher.reservations[0].active %}
+                            <a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-success btn-sm">Launch</a>
+                            <a href="/release/{{ launcher.reservations[0].id }}" class="btn btn-warning btn-sm">Release</button>
                             {% endif %}
                         </th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.purpose }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.reserved_by }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.start|timestamp }} {% endif %}</th>
-                        <th scope="row">{% if launcher.reservation %} {{ launcher.reservation.end|timestamp }} {% endif %}</th>
+                        {% if launcher.reservations %}
+                        <th scope="row">
+                            <ul>
+                                {% for reservation in launcher.reservations %}
+                                <li>{{ reservation.purpose }}</li>
+                                {% endfor %}
+                            </ul>
+                        </th>
+                        <th scope="row">
+                            <ul>
+                                {% for reservation in launcher.reservations %}
+                                <li>{{ reservation.reserved_by }}</li>
+                                {% endfor %}
+                            </ul>
+                        </th>
+                        <th scope="row">
+                            <ul>
+                                {% for reservation in launcher.reservations %}
+                                <li>{{ reservation.start|timestamp }}</li>
+                                {% endfor %}
+                            </ul>
+                        </th>
+                        <th scope="row">
+                            <ul>
+                                {% for reservation in launcher.reservations %}
+                                <li>{{ reservation.duration }}</li>
+                                {% endfor %}
+                            </ul>
+                        </th>
+                        {% else %}
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        <th scope="row"></th>
+                        {% endif %}
                         <th scope="row">Idle</th>
                         <th scope="row"></th>
                         <th scope="row"></th>
@@ -112,7 +141,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th scope="col">Cluster</th>
+                    <th scope="col">Launcher</th>
                     <th scope="col">Purpose</th>
                     <th scope="col">Reserved By</th>
                     <th scope="col">Reservation Start</th>
@@ -122,7 +151,7 @@
                 <tbody>
                     {% for reservation in reservation_history %}
                     <tr>
-                        <th scope="row">{{ reservation.cluster }}</th>
+                        <th scope="row">Launcher {{ reservation.cluster }}</th>
                         <th scope="row">{{ reservation.purpose }}</th>
                         <th scope="row">{{ reservation.reserved_by }}</th>
                         <th scope="row">{{ reservation.start|timestamp }}</th>
@@ -131,6 +160,41 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {% for launcher in launchers %}
+            <div class="modal fade" id="reserve{{ launcher.number }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Reserve Cluster {{ launcher.number }}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/reserve" method="POST">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Name</label>
+                                <input type="text" class="form-control" name="name" id="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="purpose" class="form-label">Purpose</label>
+                                <input type="text" class="form-control" name="purpose" id="purpose">
+                            </div>
+                            <input type="hidden" value="{{ launcher.number }}" class="form-control" name="cluster" id="cluster">
+                            <div class="mb-3">
+                                <label for="startDate" class="form-label">Start (empty for now) [server time: {{ server_time|timestamp }}]</label>
+                                <input type="date" class="form-control" name="startDate" id="startDate">
+                                <input type="time" class="form-control" name="startTime" id="startTime">
+                            </div>
+                            <div class="mb-3">
+                                <label for="duration" class="form-label">Duration (hours)</label>
+                                <input type="text" class="form-control" name="duration" id="duration">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </form>
+                    </div>
+                </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
