--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -10,7 +10,9 @@
             {% with messages = get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
-                    {{ message }}
+                    <div class="alert alert-danger" role="alert">
+                        {{ message }}
+                    </div>
                 {% endfor %}
             {% endif %}
             {% endwith %}
