Reservations as separate rows

--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -17,11 +17,15 @@
             {% endif %}
             {% endwith %}
             <h3>Clusters</h3>
-            <table class="table">
+            <table class="table align-middle">
                 <thead>
                     <tr>
                         <th scope="col">Launcher</th>
-                        <th scope="col">Reservations</th>
+                        <th scope="col">Purpose</td>
+                        <th scope="col">Reserved By</td>
+                        <th scope="col">Reservation Start</td>
+                        <th scope="col">Reservation Duration</td>
+                        <th scope="col">Manage Reservation</td>
                         <th scope="col">Status</th>
                         <th scope="col">Live Start Time</th>
                         <th scope="col">Live Duration</th>
@@ -31,47 +35,26 @@
                 </thead>
                 <tbody>
                     {% for launcher in launchers %}
-                    <tr>
+                    <tr class="{{ 'table-success' if launcher.running }}">
                         <td>
                             Launcher {{ launcher.number }}
-                            {% if launcher.running %}
-                            <button type="button" class="btn btn-danger btn-sm">Stop</button>
-                            {% elif launcher.reservations and launcher.reservations[0].active %}
-                            <a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-success btn-sm">Launch</a>
-                            {% endif %}
+                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#reserve{{ launcher.number }}">Reserve</button>
+                            <a href="http://qa.sc.couchbase.com/job/{{ launcher.job_name }}/build?delay=0sec" target="_blank" class="btn btn-success btn-sm {{ 'disabled' if launcher.running or not launcher.reservations or not launcher.reservations[0].active }}">Launch</a>
+                            <button type="button" class="btn btn-danger btn-sm {{ 'disabled' if not launcher.running }}">Stop</button>
                         </td>
-                        <td>
-                            {% if launcher.reservations %}
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th scope="col">Purpose</td>
-                                        <th scope="col">Reserved By</td>
-                                        <th scope="col">Start</td>
-                                        <th scope="col">Duration</td>
-                                        <th scope="col">Manage</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    
-                                    {% for reservation in launcher.reservations %}
-                                    <tr>
-                                        <td>{{ reservation.purpose }}</td>
-                                        <td>{{ reservation.reserved_by }}</td>
-                                        <td>{{ reservation.start|timestamp }}</td>
-                                        <td>{{ reservation.duration }}</td>
-                                        <td><a href="/release/{{ reservation.id }}" class="btn btn-warning btn-sm">Release</button></td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                            {% else %}
-                            No reservations
-                            {% endif %}
-                            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#reserve{{ launcher.number }}">
-                                Reserve
-                            </button>
-                        </td>
+                        {% if launcher.reservations and launcher.reservations[0].active %}
+                        <td>{{ launcher.reservations[0].purpose }}</td>
+                        <td>{{ launcher.reservations[0].reserved_by }}</td>
+                        <td>{{ launcher.reservations[0].start|timestamp }}</td>
+                        <td>{{ launcher.reservations[0].duration }}</td>
+                        <td><a href="/release/{{ launcher.reservations[0].id }}" class="btn btn-warning btn-sm {{ 'disabled' if launcher.running }}">Release</button></td>
+                        {% else %}
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        {% endif %}
                         {% if launcher.running %}
                         <td>Running</td>
                         <td>{{ launcher.started|timestamp }}</td>
@@ -92,6 +75,23 @@
                         <td></td>
                         {% endif %}
                     </tr>
+                    {% if launcher.reservations %}
+                    {% for reservation in launcher.reservations | rejectattr('active', 'eq', True) %}
+                    <tr>
+                        <td></td>
+                        <td>{{ reservation.purpose }}</td>
+                        <td>{{ reservation.reserved_by }}</td>
+                        <td>{{ reservation.start|timestamp }}</td>
+                        <td>{{ reservation.duration }}</td>
+                        <td><a href="/release/{{ reservation.id }}" class="btn btn-warning btn-sm">Release</button></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    {% endfor %}
+                    {% endif %}
                     {% endfor %}
                 </tbody>
             </table>
