--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -96,7 +96,7 @@
                 </tbody>
             </table>
             <h3>History</h3>
-            <table class="table">
+            <table class="table align-middle">
                 <thead>
                 <tr>
                     <th scope="col">Launcher</th>
@@ -135,14 +135,14 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form action="/reserve" method="POST">
+                        <form action="/reserve" method="POST" autocomplete="off">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" name="name" id="name">
+                                <input required type="text" class="form-control" name="name" id="name">
                             </div>
                             <div class="mb-3">
                                 <label for="purpose" class="form-label">Purpose</label>
-                                <input type="text" class="form-control" name="purpose" id="purpose">
+                                <input required type="text" class="form-control" name="purpose" id="purpose">
                             </div>
                             <input type="hidden" value="{{ launcher.number }}" class="form-control" name="cluster" id="cluster">
                             <div class="mb-3">
@@ -152,7 +152,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="duration" class="form-label">Duration (hours)</label>
-                                <input type="text" class="form-control" name="duration" id="duration">
+                                <input required type="number" min="0" step="any" class="form-control" name="duration" id="duration">
                             </div>
                             <button type="submit" class="btn btn-primary">Reserve</button>
                         </form>
