--- a/system_testing_dashboard/templates/index.html
+++ b/system_testing_dashboard/templates/index.html
@@ -122,7 +122,7 @@
                 <tbody>
                     {% for reservation in reservation_history %}
                     <tr>
-                        <td><a href="/deleteReservation/{{ reservation.id }}" class="btn btn-danger btn-sm">X</td>
+                        <td><a href="/deleteHistory/{{ reservation.id }}" class="btn btn-danger btn-sm">X</td>
                         <td>Launcher {{ reservation.cluster }}</td>
                         <td>{{ reservation.purpose }}</td>
                         <td>{{ reservation.reserved_by }}</td>
@@ -238,4 +238,5 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    <script>document.cookie = `timezoneOffset=${new Date().getTimezoneOffset()}; SameSite=Strict`</script>
 </html>
